tests/baselines/reference/parser_continueTarget3.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueTarget3.ts(2,1): error TS7028: Unused label.


==== tests/cases/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueTarget3.ts (1 errors) ====
    target1:
    target2:
    ~~~~~~~
!!! error TS7028: Unused label.
    while (true) {
      continue target1;
    }